--- a/src/commons/layout/navigation/styles.module.css
+++ b/src/commons/layout/navigation/styles.module.css
@@ -1,9 +1,10 @@
 .Layout {
-  width: 1280px;
+  width: 100%;
+  max-width: 1280px;
   height: 80px;
   gap: 10px;
-  padding-right: 20px;
-  padding-left: 420px;
+  padding-right: 0px;
+  padding-left: 400px;
   display: flex;
   justify-content: column;
   align-items: center;
@@ -14,7 +15,7 @@
   justify-content: space-between;
   align-items: center;
   align-self: stretch;
-  width: 1280px;
+  width: 100%;
   height: 80px;
   max-width: 1280px;
   padding-top: 25px;
