--- a/src/components/boards-detail/comment-list-item/styles.module.css
+++ b/src/components/boards-detail/comment-list-item/styles.module.css
@@ -1,6 +1,8 @@
 .commentItem {
   display: flex;
-  padding: 0px 0px 30px 0px;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 0px 0px 0px;
 }
 .commentListBody {
   display: flex;
