--- a/src/components/boards-detail/comment-write/styles.module.css
+++ b/src/components/boards-detail/comment-write/styles.module.css
@@ -9,7 +9,7 @@
 
 .commentListContainer {
   display: flex;
-  width: 1280px;
+  max-width: 1280px;
   flex-direction: column;
   align-items: flex-start;
   gap: 40px;
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 24px;
+  gap: 11px;
   align-self: stretch;
   width: 100%;
 }
@@ -80,6 +80,29 @@
   color: #fff;
 
   text-align: center;
+  box-shadow: 0px 0px 8px Gray;
+}
+.commentCancelButton {
+  border-radius: 8px;
+  background: var(--Gray-Gray-400, rgb(253, 86, 86));
+
+  text-align: center;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px; /* 133.333% */
+
+  display: flex;
+  height: 48px;
+  padding: 12px 16px;
+  align-items: center;
+  gap: 8px;
+
+  color: #fff;
+
+  text-align: center;
+
+  box-shadow: 0px 0px 8px Gray;
 }
 
 .commentEnrollButton:disabled {
@@ -92,6 +115,8 @@
   display: flex;
   justify-content: end;
   width: 100%;
+  padding: 0px 10px;
+  gap: 15px;
 }
 
 .borderLine {
