--- a/src/components/boards-list/list/styles.module.css
+++ b/src/components/boards-list/list/styles.module.css
@@ -3,6 +3,7 @@
 .boardBody {
   display: flex;
   padding: 0px 320px;
+  max-width: 1920px;
   flex-direction: column;
   align-items: center;
   gap: 40px;
