--- a/src/components/open-api-list/styles.module.css
+++ b/src/components/open-api-list/styles.module.css
@@ -1,44 +1,115 @@
-.app {
-  width: 100%;
-  padding-top: 20px;
-  max-width: 1920px;
-  margin: 0 auto;
+.Layout {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  align-items: center;
+  padding: 50px 0px;
   background-color: #fafafa;
 }
 
-/* 이미지 그리드 레이아웃 */
-.imageGrid {
-  display: grid;
-  padding: 100px;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 1px;
-}
-
-.imageContainer {
+.ListContainer {
   display: flex;
+  width: 650px;
+  justify-content: space-between;
   flex-direction: column;
+  gap: 15px;
+  padding: 24px 48px;
+
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.08);
+  border-radius: 16px;
+}
+
+.ListHeader {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
   align-items: center;
-  aspect-ratio: 1/1; /* 정사각형 비율 유지 */
-  overflow: hidden;
-}
-
-.catImage {
-  width: 95%;
-  height: 95%;
-  object-fit: cover;
-  transition: transform 0.3s ease;
-  box-shadow: 1px 1px 10px gray;
-}
-
-.catImage:hover {
-  transform: scale(1.03);
-}
-
-/* 로딩 인디케이터 */
-.loadingIndicator,
-.endMessage {
   text-align: center;
-  padding: 20px;
-  color: #8e8e8e;
-  grid-column: 1 / -1;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  background-color: #f9f9f9;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+.HeaderNumber,
+.HeaderTitle,
+.HeaderWriter,
+.HeaderDate {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: #1c1c1c;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.HeaderNumber {
+  width: 64px;
+}
+
+.HeaderTitle {
+  flex: 1 0 0;
+  justify-content: left;
+}
+
+.HeaderWriter,
+.HeaderDate {
+  width: 100px;
+}
+
+.ListItem {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  text-align: center;
+  align-items: center;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  background-color: #f9f9f9;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.ContentNumber,
+.ContentWriter,
+.ContentDate {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  overflow: hidden;
+  text-align: center;
+  text-overflow: ellipsis;
+}
+
+.ContentNumber {
+  width: 64px;
+  color: var(--Gray-50, var(--gray-500, #919191));
+  font-size: 14px;
+}
+
+.ContentTitle {
+  overflow: hidden;
+  color: var(--Gray-90, #1c1c1c);
+  font-size: 14px;
+  display: flex;
+
+  align-items: center;
+  gap: 10px;
+  flex: 1 0 0;
+  justify-content: left;
+}
+
+.ContentWriter {
+  width: 100px;
+  color: var(--Gray-80, var(--gray-800, #333));
+  font-size: 14px;
+}
+
+.ContentDate {
+  width: 100px;
+  color: var(--Gray-50, var(--gray-500, #919191));
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 20px;
 }
