--- a/src/components/boards-detail/comment-write/styles.module.css
+++ b/src/components/boards-detail/comment-write/styles.module.css
@@ -1,10 +1,17 @@
 .commentListFrame {
   display: flex;
+  width: 100%;
+  padding: 40px 0px 0px 0px;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  /* display: flex;
   width: 1480px;
   padding: 40px 0px 50px 400px;
   flex-direction: column;
   align-items: center;
-  gap: 40px;
+  gap: 40px; */
 }
 
 .commentListContainer {
