--- a/src/components/open-api-list/styles.module.css
+++ b/src/components/open-api-list/styles.module.css
@@ -68,9 +68,10 @@
   border-radius: 0.5rem;
   background-color: #f9f9f9;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  transition: 0.2s ease;
 }
 .ListItem:hover {
-  background-color: #f0f0f0;
+  background-color: rgb(200, 200, 200);
 }
 
 .ListItemNumber,
