--- a/src/components/boards-write/styles.module.css
+++ b/src/components/boards-write/styles.module.css
@@ -7,7 +7,7 @@
   display: flex;
   width: 100%;
   min-width: 1280px;
-  padding: 0px 20px;
+  padding: 40px 20px 40px 20px;
   justify-content: center;
   flex-direction: column;
   gap: 40px;
