--- a/src/components/open-api-list/styles.module.css
+++ b/src/components/open-api-list/styles.module.css
@@ -1,16 +1,16 @@
 .Layout {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  /* height: 100vh; */
   align-items: center;
-  padding: 50px 0px;
+  padding: 15px 0px 20px 0px;
   /* background-color: #fafafa; */
 }
 
 .ListContainer {
   display: flex;
   width: 100%;
-  max-width: 1080px;
+  max-width: 1100px;
   justify-content: space-between;
   flex-direction: column;
   gap: 15px;
