now we can upload images at localhost:3000

--- a/src/components/boards-write/styles.module.css
+++ b/src/components/boards-write/styles.module.css
@@ -154,6 +154,13 @@
   display: flex;
   flex-direction: row;
   gap: 15px;
+  position: relative;
+}
+
+.imagePrevCancelButton {
+  position: absolute;
+  width: 10px;
+  height: -2px;
 }
 
 .enrollButtonContainer {
