--- a/src/components/boards-list/list/styles.module.css
+++ b/src/components/boards-list/list/styles.module.css
@@ -2,9 +2,9 @@
 
 .boardBody {
   display: flex;
-  padding: 0px 320px;
-  max-width: 1920px;
+  /* padding: 0px 320px; */
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   gap: 40px;
   align-self: stretch;
@@ -13,13 +13,12 @@
 .boardFrame {
   margin-top: 10px;
   display: flex;
-  max-width: 1280px;
+  width: 1080px;
+  max-width: 1980px;
   flex-direction: column;
   align-items: center;
   gap: 24px;
-  align-self: stretch;
   padding: 24px 48px;
-
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.08);
   border-radius: 16px;
 }
