--- a/src/components/boards-list/searchBar/styles.module.css
+++ b/src/components/boards-list/searchBar/styles.module.css
@@ -1,7 +1,7 @@
 .Layout {
   display: flex;
-  padding: 0px 320px;
-  max-width: 1920px;
+  /* padding: 0px 320px; */
+  /* max-width: 1920px; */
   flex-direction: column;
   align-items: center;
   gap: 40px;
@@ -18,11 +18,12 @@
 
 .searchBarFrame {
   display: flex;
-  max-width: 1280px;
+  width: 1080px;
+  max-width: 1680px;
   flex-direction: column;
   align-items: center;
   gap: 24px;
-  align-self: stretch;
+  /* align-self: stretch; */
   padding: 10px 0px;
 }
 
