--- a/src/components/open-api-list/search/styles.module.css
+++ b/src/components/open-api-list/search/styles.module.css
@@ -1,11 +1,9 @@
 .Layout {
   display: flex;
-  padding: 0px 320px;
-  max-width: 1920px;
   flex-direction: column;
+  width: 100%;
   align-items: center;
-  gap: 40px;
-  align-self: stretch;
+  padding: 15px 0px 20px 0px;
 }
 
 .mainHeadText {
@@ -18,12 +16,12 @@
 
 .searchBarFrame {
   display: flex;
-  max-width: 1280px;
+  width: 100%;
+  max-width: 1100px;
+  justify-content: space-between;
   flex-direction: column;
-  align-items: center;
-  gap: 24px;
-  align-self: stretch;
-  padding: 10px 0px;
+  gap: 15px;
+  padding: 0px 10px;
 }
 
 .searchBarInnerBody {
