--- a/src/components/open-api-write/styles.module.css
+++ b/src/components/open-api-write/styles.module.css
@@ -2,28 +2,29 @@
   display: flex;
   justify-content: center;
   min-height: 100vh;
-  background: #1a1a1a;
+  background: rgb(255, 255, 255);
   padding: 2rem;
 }
 
 .darkFormSurface {
   width: 100%;
   max-width: 800px;
-  background: #2d2d2d;
+  background: rgb(246, 246, 246);
   border-radius: 20px;
   padding: 2.5rem;
   box-shadow:
-    12px 12px 24px #121212,
-    -8px -8px 16px #484848;
+    12px 12px 24px rgb(233, 233, 233),
+    -8px -8px 16px rgb(231, 231, 231);
 }
 
 .formTitle {
-  color: #e0e0e0;
+  color: rgb(31, 31, 31);
+  font-family: Pretendard Variable;
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 2rem;
   text-align: start;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  text-shadow: 2px 2px 4px rgba(94, 94, 94, 0.5);
 }
 
 .inputGroup {
@@ -49,8 +50,10 @@
 }
 
 .inputLabel {
-  color: #9e9e9e;
+  font-family: Pretendard Variable;
+  color: rgb(35, 35, 35);
   font-size: 1.1rem;
+  font-weight: 300;
   margin-bottom: 0.5rem;
   position: relative;
   display: block;
@@ -72,11 +75,11 @@
   padding: 1rem 1.5rem;
   border: none;
   border-radius: 12px;
-  background: #2d2d2d;
+  background: rgb(255, 255, 255);
   color: #e0e0e0;
   box-shadow:
-    inset 5px 5px 10px #202020,
-    inset -5px -5px 10px #3a3a3a;
+    inset 5px 5px 10px rgb(169, 169, 169),
+    inset -5px -5px 10px rgb(201, 201, 201);
   transition: all 0.3s ease;
 }
 
@@ -139,12 +142,12 @@
   border: none;
   border-radius: 12px;
   background: #e0e0e0;
-  color: #3a3a3a;
+  color: rgb(10, 10, 10);
   font-size: 1.1rem;
   font-weight: 600;
   box-shadow:
-    6px 6px 12px #202020,
-    -4px -4px 8px #545454;
+    6px 6px 12px rgb(133, 133, 133),
+    -4px -4px 8px rgb(136, 136, 136);
   cursor: pointer;
   transition: all 0.3s ease;
 }
@@ -191,11 +194,11 @@
   padding: 1rem;
   border: none;
   border-radius: 12px;
-  background: #2d2d2d;
-  color: #e0e0e0;
+  background: rgb(246, 246, 246);
+  color: rgb(103, 103, 103);
   box-shadow:
-    inset 5px 5px 10px #202020,
-    inset -5px -5px 10px #3a3a3a;
+    inset 5px 5px 10px rgb(169, 169, 169),
+    inset -5px -5px 10px rgb(201, 201, 201);
 }
 
 .zipCodeButton {
@@ -237,11 +240,11 @@
   padding: 1rem;
   border: none;
   border-radius: 12px;
-  background: #2d2d2d;
-  color: #e0e0e0;
+  background: rgb(246, 246, 246);
+  color: rgb(103, 103, 103);
   box-shadow:
-    inset 5px 5px 10px #202020,
-    inset -5px -5px 10px #3a3a3a;
+    inset 5px 5px 10px rgb(169, 169, 169),
+    inset -5px -5px 10px rgb(201, 201, 201);
   transition: all 0.3s ease;
 }
 
@@ -273,11 +276,11 @@
   padding: 1rem;
   border: none;
   border-radius: 12px;
-  background: #2d2d2d;
-  color: #e0e0e0;
+  background: rgb(246, 246, 246);
+  color: rgb(103, 103, 103);
   box-shadow:
-    inset 5px 5px 10px #202020,
-    inset -5px -5px 10px #3a3a3a;
+    inset 5px 5px 10px rgb(169, 169, 169),
+    inset -5px -5px 10px rgb(201, 201, 201);
   transition: all 0.3s ease;
 }
 .youtubeLinkInput:focus {
