--- a/src/commons/layout/navigation/styles.module.css
+++ b/src/commons/layout/navigation/styles.module.css
@@ -1,17 +1,14 @@
 .Layout {
-  width: 100%;
-
   height: 80px;
-  gap: 10px;
-  padding: 0px 100px;
-  display: flex;
-  justify-content: column;
-  align-items: center;
+  padding: 20px 100px;
+  /* display: flex; */
+  /* justify-content: row; */
+  /* align-items: center; */
 }
 
 .HeaderWrapper {
-  display: flex;
-  justify-content: space-between;
+  /* display: flex; */
+  /* justify-content: space-between; */
   align-items: center;
   width: 100%;
 }
@@ -19,8 +16,8 @@
 .TapWrapper {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  width: 364px;
+  /* justify-content: space-between; */
+  width: 100%;
   height: 40px;
   gap: 24px;
 }
@@ -44,7 +41,14 @@
   font-weight: 500;
   line-height: 24px; /* 150% */
 }
-
+.Navigation {
+  display: flex;
+  width: 100%;
+}
+.profileNavFrame {
+  display: flex;
+  justify-content: flex-end;
+}
 .ProfileWrapper {
   display: flex;
 
