--- a/src/components/boards-detail/comment-list-item/styles.module.css
+++ b/src/components/boards-detail/comment-list-item/styles.module.css
@@ -6,18 +6,17 @@
 }
 .commentListBody {
   display: flex;
-  width: 1480px;
+  width: 100%;
   padding: 40px 0px 50px 400px;
   flex-direction: column;
   align-items: center;
-  gap: 40px;
 }
 
 .commentListContainer {
   display: flex;
-  width: 1280px;
+  max-width: 1280px;
   flex-direction: column;
-  align-items: flex-start;
+  /* align-items: flex-start; */
   gap: 40px;
 }
 
@@ -37,7 +36,7 @@
 
 .backTitle {
   display: flex;
-  justify-content: ;
+  justify-content:;
   align-items: center;
   gap: 8px;
 }
