--- a/src/components/shopping-detail/comment-list-item/styles.module.css
+++ b/src/components/shopping-detail/comment-list-item/styles.module.css
@@ -37,7 +37,7 @@
 
 .backTitle {
   display: flex;
-  justify-content: ;
+  justify-content:;
   align-items: center;
   gap: 8px;
 }
@@ -46,45 +46,35 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 8px;
+  gap: 18px;
   align-self: stretch;
 }
 
 .forwardTitleText {
-  color: var(--gray-700, #5f5f5f);
-
-  /* l_14_20 */
-  font-family: "Pretendard Variable";
+  /* color: var(--gray-700, #5f5f5f); */
+  /* font-family: "Pretendard Variable"; */
   font-size: 14px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 20px; /* 142.857% */
+  font-weight: 370;
+  line-height: 20px;
 }
 
 .commentText {
   color: var(--gray-800, #333);
-
-  /* r_16_24 */
-  font-family: "Pretendard Variable";
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 150% */
+  line-height: 24px;
 }
 
 .commentDate {
   color: #818181;
-
-  /* r_14_20 */
-  font-family: "Pretendard Variable";
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 20px; /* 142.857% */
+  line-height: 20px;
 }
 
 .border {
-  width: 1280px;
+  width: 100%;
   height: 1px;
   background: var(--gray-100, #e4e4e4);
   margin-top: 40px;
