--- a/src/components/new-profile/styles.module.css
+++ b/src/components/new-profile/styles.module.css
@@ -5,39 +5,47 @@
   align-items: center;
 }
 
-.LoginText {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-}
-
-.LoginTitle {
-  font-size: 18px;
-  font-weight: 600;
-}
-
-.LoginHello {
-  font-size: 14px;
-  font-weight: 400;
-}
-
-.LoginFrame {
-  margin-bottom: 130px;
+.SignUpFrame {
+  margin-bottom: 150px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 30px;
   width: 100%;
   max-width: 400px;
+  gap: 25px;
+}
+
+.SignUpText {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 20px;
 }
 
-.InputContainer {
+.SignUpTitle {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.SignUpHello {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.SignUpInputContainer {
+  margin-bottom: 5px;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 12px;
+  font-size: 14px;
+  font-weight: 320;
+}
+.SignUpButtonContainer {
   width: 100%;
   display: flex;
-  flex-direction: column;
-  gap: 18px;
+  justify-content: center;
 }
 
 .ImageFrame {
@@ -46,8 +54,9 @@
   justify-content: center;
   align-items: center;
 }
-
-.ButtonContainer {
+.InputContainer {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  gap: 5px;
 }
